0x09-python-everything_is_object/18-answer.txt
ERROR!
file "<string>", line 6
	11 = [1, 2, 3]
	^^
SyntaxError: can't assign to literal here. maybe you meant '=='
	instead of '='?
